2006-05-21  rgareus  <robin@gareus.org>
 - minor fixes on the build environement for `make dist` (contrib, qt-gui sources, ..)
 - fixed some typos in yesterdays Makefile.am
 - never ending overkilling docbook
 * version v0.3.12

2006-05-20  rgareus  <robin@gareus.org>
 - added docbook xslt and doc/Makefile...
 - work in progres on the manual.
 - changed Audioframe to videoframe, smpte converstion from floor to rint 
   yielding to proper results if audibuffers size != 1920 (48k->PAL) or 1601 (48k->NTSC) 

2006-04-28  rgareus  <robin@gareus.org>
 - fixed typo: since the 04/23 patches
   xjadeo was displaying the previous instead of the current frame!

2006-27-09  Luis Garrido  <luisgarrido@users.sourceforge.net>
 - Added OSD font, frame and smpte commands to qjadeo menu.
 - OSD font is stored as a qjadeo preference.
 - Some docbook fixing.
 - Revamped qjadeo layout.

2006-04-23  rgareus  <robin@gareus.org>
 - some remote function help typos
 - parsing videomode integer and text
 - notify [loop|frame]
 - more work in progress documentation.
 * version v0.3.11

2006-04-22  rgareus  <robin@gareus.org>
 - added contrib folder
 - implememted 'list videomodes'
 - disabled 'get windowpos'
 - configure.ac: added contrib/cli-remote/Makefile to AC_CONFIG_FILES
   Note: contrib will not be built as it is not a subdir in Makefile.am
 - remote command return status now identifies physical units.
   added doc to the source: remote.c
 - changed return value of some xapi function.
   only MINOR numbers have been changed (rv: = MAJOR*100 + MINOR)
 * xjadeo v0.3.10

2006-04-17  rgareus  <robin@gareus.org>
 - amidi seqencer instead of alsa rawmidi
 - remote cmd midi status fixed.
 - cmd arg. added "-x list" as alias for "-x -1"

2006-04-16  rgareus  <robin@gareus.org>
 - configure.ac: --disable-portmidi -> 'force to' use alsamidi if avaliable
 - midi.c: added MTC sysex parser for alsamidi.
 - main.c: xjadeo new command line option -i <OSD-mode>, --info <OSD-mode>